@@ -2,23 +2,13 @@ package br.upe.acs.controlador;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import br.upe.acs.dominio.dto.RequisicaoRascunhoDTO;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
+import br.upe.acs.config.JwtService;
+import jakarta.servlet.http.HttpServletRequest;
+import org.springframework.http.*;
+import org.springframework.web.bind.annotation.*;
 
 import br.upe.acs.controlador.respostas.RequisicaoResposta;
-import br.upe.acs.dominio.dto.RequisicaoDTO;
-import br.upe.acs.servico.RequisicaoCertificadoServico;
 import br.upe.acs.servico.RequisicaoServico;
 import br.upe.acs.utils.AcsExcecao;
 import io.swagger.v3.oas.annotations.Operation;
@@ -27,18 +17,20 @@ import lombok.RequiredArgsConstructor;
 @RestController
 @RequestMapping("api/requisicao")
 @RequiredArgsConstructor
-@CrossOrigin
+@CrossOrigin(origins = "*")
 public class RequisicaoControlador {
 
     private final RequisicaoServico servico;
 
-    private final RequisicaoCertificadoServico requisicaoCertificadoServico;
+    private final JwtService jwtService;
 
+    private final RequisicaoServico requisicaoServico;
+    
     @Operation(summary = "Listar todas as requisições")
     @GetMapping
     public ResponseEntity<List<RequisicaoResposta>> listarRequisicoes() {
-        return ResponseEntity.ok(servico.listarRequisicoes().stream()
-                .map(RequisicaoResposta::new).collect(Collectors.toList()));
+        return ResponseEntity.ok(servico.listarRequisicoes().stream().filter(requisicao -> !requisicao.isArquivada())
+                .map(RequisicaoResposta::new).toList());
     }
 
     @Operation(summary = "Listar as requisições com paginação")
@@ -50,69 +42,123 @@ public class RequisicaoControlador {
 
     @Operation(summary = "Listar as requisições de um usuário específico")
     @GetMapping("/usuario/{id}")
-    public ResponseEntity<List<RequisicaoResposta>> listarRequisicoesPorUsuario(@PathVariable("id") Long usuarioId)
-            throws AcsExcecao {
-        return ResponseEntity.ok(servico.listarRequisicoesPorUsuario(usuarioId).stream()
-                .map(RequisicaoResposta::new).collect(Collectors.toList()));
+    public ResponseEntity<?> listarRequisicoesPorAluno(@PathVariable("id") Long alunoId) {
+        try {
+            return ResponseEntity.ok(servico.listarRequisicoesPorAluno(alunoId).stream()
+                    .filter(requisicao -> !requisicao.isArquivada()).map(RequisicaoResposta::new).toList());
+        } catch (AcsExcecao e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
 
     @Operation(summary = "Buscar requisição por id")
     @GetMapping("/{id}")
     public ResponseEntity<?> buscarRequisicaoPorId(@PathVariable("id") Long id) {
         try {
-            RequisicaoResposta requisicaoResposta = new RequisicaoResposta(servico.buscarRequisicaoPorId(id).orElseThrow());
+            RequisicaoResposta requisicaoResposta = new RequisicaoResposta(servico.buscarRequisicaoPorId(id));
             return ResponseEntity.ok(requisicaoResposta);
         } catch (AcsExcecao e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    @Operation(summary = "Adicionar requisição com certificados")
-    @PostMapping(consumes = {"multipart/form-data"})
-    public ResponseEntity<?> adicionarRequisicao(@RequestParam(value = "usuarioId") Long usuarioId,
-                                                 @RequestParam(value = "cursoId") Long cursoId,
-                                                 @RequestParam(value = "semestre") int semestre,
-                                                 @RequestParam(value = "qtdCertificados") int qtdCertificados,
-                                                 @RequestPart(value = "certificados") MultipartFile[] certificados,
-                                                 @RequestPart(value = "certificadosMetadados") MultipartFile certificadosMetadados) {
-        RequisicaoDTO requisicaoDTO = new RequisicaoDTO();
-        requisicaoDTO.setCursoId(cursoId);
-        requisicaoDTO.setUsuarioId(usuarioId);
-        requisicaoDTO.setSemestre(semestre);
-        requisicaoDTO.setQtdCertificados(qtdCertificados);
-        requisicaoDTO.setCertificados(certificados);
-        requisicaoDTO.setCertificadosMetadados(certificadosMetadados);
-
+    @Operation(summary = "Adicionar requisição")
+    @PostMapping
+    public ResponseEntity<?> adicionarRequisicao(HttpServletRequest request) {
         ResponseEntity<?> resposta;
+        String email = jwtService.extractUsername(request.getHeader("Authorization").substring(7));
         try {
-            resposta = ResponseEntity.ok(requisicaoCertificadoServico.adicionarRequisicao(requisicaoDTO));
+            resposta = ResponseEntity.status(201).body(requisicaoServico.adicionarRequisicao(email));
         } catch (Exception e) {
             resposta = ResponseEntity.badRequest().body(e.getMessage());
         }
 
         return resposta;
     }
+    
+    @Operation(summary = "Arquivar requisição")
+    @PostMapping("/arquivar/{id}")
+    public ResponseEntity<?> arquivarRequisicao(@PathVariable Long id, HttpServletRequest request){
+    	ResponseEntity<?> resposta;
+    	String email = jwtService.extractUsername(request.getHeader("Authorization").substring(7));
+    	try {
+    		resposta = ResponseEntity.ok(requisicaoServico.arquivarRequisicao(id, email));
+    	} catch(AcsExcecao e) {
+    		resposta = ResponseEntity.badRequest().body(e.getMessage());
+    	}
+    	return resposta;
+    }
+    
+    @Operation(summary = "Desarquivar requisicao")
+    @PostMapping("/desarquivar/{id}")
+    public ResponseEntity<?> desarquivarRequisicao(@PathVariable Long id, HttpServletRequest request){
+    	ResponseEntity<?> resposta;
+    	String email = jwtService.extractUsername(request.getHeader("Authorization").substring(7));
+    	try {
+    		resposta = ResponseEntity.ok(requisicaoServico.desarquivarRequisicao(id, email));
+    	} catch (AcsExcecao e) {
+    		resposta = ResponseEntity.badRequest().body(e.getMessage());
+    	}
+    	
+    	return resposta;
+    }
+    
+    @Operation(summary = "Listar requisições arquivadas")
+    @GetMapping("/arquivar")
+    public ResponseEntity<?> listarRequisicoesArquivadas(HttpServletRequest request){
+    	ResponseEntity<?> resposta;
+    	String email = jwtService.extractUsername(request.getHeader("Authorization").substring(7));
+    	try {
+    		resposta = ResponseEntity.ok(requisicaoServico.listarRequisicoesArquivadas(email)
+    				.stream().map(RequisicaoResposta::new).toList());
+    	} catch(AcsExcecao e) {
+    		resposta = ResponseEntity.badRequest().body(e.getMessage());    		
+    	}
+    	
+    	return resposta;
+    }
 
-    @PostMapping(path = "/rascunho", consumes = {"multipart/form-data"})
-    public ResponseEntity<?> adicionarRequisicaoRascunho(@RequestParam(value = "usuarioId") Long usuarioId,
-                                                         @RequestParam(value = "cursoId") Long cursoId,
-                                                         @RequestParam(value = "semestre") int semestre,
-                                                         @RequestParam(value = "qtdCertificados") int qtdCertificados,
-                                                         @RequestPart(value = "certificados", required = false) MultipartFile[] certificados,
-                                                         @RequestPart(value = "certificadosMetadados") MultipartFile certificadosMetadados) {
-        RequisicaoRascunhoDTO requisicaoRascunhoDTO = new RequisicaoRascunhoDTO();
-        requisicaoRascunhoDTO.setSemestre(semestre);
-        requisicaoRascunhoDTO.setQtdCertificados(qtdCertificados);
-        requisicaoRascunhoDTO.setUsuarioId(usuarioId);
-        requisicaoRascunhoDTO.setCursoId(cursoId);
-        requisicaoRascunhoDTO.setCertificadoArquivos(certificados);
-        requisicaoRascunhoDTO.setCertificadosMetadados(certificadosMetadados);
+   
+    @Operation(summary = "Baixar pdf de uma requisição")
+    @PostMapping("{id}/pdf")
+    public ResponseEntity<?> gerarRequisicaoPDF(@PathVariable("id") Long requisicaoId) {
+        ResponseEntity<?> resposta;
 
+        try {
+            HttpHeaders headers = new HttpHeaders();
+            headers.setContentType(MediaType.APPLICATION_PDF);
+            headers.setContentDisposition(ContentDisposition.attachment()
+                    .filename("requisição" + requisicaoId + ".pdf").build());
+            resposta = ResponseEntity.ok().headers(headers).body(servico.gerarRequisicaoPDF(requisicaoId));
+        } catch (AcsExcecao e) {
+            resposta = ResponseEntity.badRequest().body(e.getMessage());
+        }
+
+        return resposta;
+    }
+
+    @Operation(summary = "Submissão de requisição")
+    @PutMapping("/submissão/{id}")
+    public ResponseEntity<?> submeterRequisicao(@PathVariable("id") Long requisicaoId) {
         ResponseEntity<?> resposta;
         try {
-            requisicaoCertificadoServico.salvarRascunho(requisicaoRascunhoDTO);
-            resposta = ResponseEntity.ok().build();
-        } catch (Exception e) {
+            resposta = ResponseEntity.ok(servico.submeterRequisicao(requisicaoId));
+        } catch (AcsExcecao e) {
+            resposta = ResponseEntity.badRequest().body(e.getMessage());
+        }
+
+        return resposta;
+    }
+
+    @Operation(summary = "Excluir requisição")
+    @DeleteMapping("/{id}")
+    public ResponseEntity<?> excluirCertificado(HttpServletRequest request, @PathVariable("id") Long requisicaoId) {
+        ResponseEntity<?> resposta;
+        String email = jwtService.extractUsername(request.getHeader("Authorization").substring(7));
+        try {
+            servico.excluirRequisicao(requisicaoId, email);
+            resposta = ResponseEntity.noContent().build();
+        } catch (AcsExcecao e) {
             resposta = ResponseEntity.badRequest().body(e.getMessage());
         }
 
